--- a/public/results.pug
+++ b/public/results.pug
@@ -3,7 +3,7 @@ html
     link(href="style.css", rel="stylesheet")
     script(src="feedback.js")
   body
-    img(src="data:image/png;base64," + image)
+    img#img(src="data:image/png;base64," + image)
     each concept in concepts
       p #{concept.name}: #{concept.value}
     button(onclick="yes()", class="label-button") Correct
