next image button works

--- a/public/results.pug
+++ b/public/results.pug
@@ -9,4 +9,4 @@ html
       p #{concept.name}: #{concept.value}
     button(onclick="evergreen()", class="label-button") Evergreen
     button(onclick="deciduous()", class="label-button") Deciduous
-    button(onclick="nextImage()", class="label-button") Next Image
+    a.label-button(href='http://localhost:3000') Next Image
